--- a/jsconfig.json
+++ b/jsconfig.json
@@ -4,7 +4,7 @@
     "paths": {
       "@components/*": ["components/*"],
       "@styles/*": ["styles/*"],
-      "@public/*": ["public"]
+      "@public/*": ["public/*"]
     }
   }
 }
